--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!--
-Cony (8-12)
-Sherlock (8-12)
-Enchanted Grove (8-12)
-Kids Klub (6-11)
-…
-The lord is my shepherd (3-7)
-…
-dragon story (3-6)
--->
 <!DOCTYPE html>
 <html lang="en" style="background-color: #f2f2f2;">
 
@@ -31,211 +21,113 @@ dragon story (3-6)
 
 <body class="body-style">
 
-	<div class="main-container" style="">
-		<h2 class="name-heading" style="color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%;">Katrina
+	<div class="main-container" style="align-items: center; justify-content: center; display: flex; flex-direction: column;">
+		<h2 class="name-heading" style="color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%; line-height:80px;" >Katrina
 			Abraham</h2>
+		<h2 class="" style="font-family: Just me Again Down Here; color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%; font-size:48px">Artist - Illustrator</h2>
 
-		<div style = "display:flex; align-items:flex-end; justify-content:bottom; padding-bottom: 5%">
-			<div>
-				<img style = "max-width:300px; border-radius: 15px" src="./assets/portfolioupdatepart1/limbo.title.png" class="rounded-image">
+		<div class="navbuttons" style=" justify-content: center; align-items: center;">
+			<div onclick="window.open('https://www.etsy.com/shop/katrinaabrahamdesign', '_blank')" class="navbutton">Visit my Etsy Shop!</div>
+			<div onclick="window.open('https://www.amazon.ca/Adventures-Cony-Forest-Ancient-Secret/dp/9334156635/ref=sr_1_1?crid=1MJFCFKMC2J4S&dib=eyJ2IjoiMSJ9.K456wtGNUYyy8iUyaMh7j-_w56nFEOXfMt5rwO7VFss.zp_3hDzMYmAZA9QQkAdWbSjg19TW2QKBsdLrT_VaGI0&dib_tag=se&keywords=cony+forest&qid=1743534210&sprefix=cony+forest%2Caps%2C100&sr=8-1', '_blank')" class="navbutton">Cony Forest available on Amazon</div>
+			<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
+			<div onclick="scrollToTarget('me')" class="navbutton">Contact Me</div>
+		</div>
+		<div style="display: flex; justify-content: center; gap: 20px; margin-top: 10px;">
+			<a href="https://www.instagram.com/katrina.abraham.art/" target="_blank">
+				<img src="assets/icons8-instagram-100.png" alt="Instagram" style="width: 30px; height: 30px;">
+			</a>
+			<a href="katrina.sm.abraham@gmail.com">
+				<img src="assets/icons8-email-100.png" alt="Email" style="width: 30px; height: 30px;">
+			</a>
+				<div>
+					<img src="./assets/cat-ezgif.com-crop.gif" style = "height:30px; " class="tile">
+				</div>
+		</div>
+
+		<div class="tile-columns" style = "max-width: 1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div >
+				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart1/limbo.title.png" class="rounded-image">
 			</div>
-			<div>
+			<div >
 				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart1/Limbo. bear confrontation.png" class="rounded-image">
 				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart1/limbo.monster view.png" class="rounded-image">
 				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart1/limbo. over shoulder.png" class="rounded-image">
 			</div>
 		</div>
-		<div>
-		<img style = "width:300px" src="./assets/portfolioupdatepart1/Untitled_Artwork.png" class="rounded-image">
-		</div>
-		<div>
-		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2103.png" class="rounded-image">
-		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2104.png" class="rounded-image">
-		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2105.png" class="rounded-image">
-		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2106.png" class="rounded-image">
-		<img style = "width:300px" src="./assets/portfolioupdatepart2/IMG_2107.png" class="rounded-image">
 
+		<div onclick="window.open('https://www.amazon.ca/Adventures-Cony-Forest-Ancient-Secret/dp/9334156635/ref=sr_1_1?crid=1MJFCFKMC2J4S&dib=eyJ2IjoiMSJ9.K456wtGNUYyy8iUyaMh7j-_w56nFEOXfMt5rwO7VFss.zp_3hDzMYmAZA9QQkAdWbSjg19TW2QKBsdLrT_VaGI0&dib_tag=se&keywords=cony+forest&qid=1743534210&sprefix=cony+forest%2Caps%2C100&sr=8-1', '_blank')"  class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px" onmouseover="this.style.cursor='pointer'">
+			<div >
+				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart1/Untitled_Artwork.png" class="rounded-image">
+			</div>
+			<div style= "margin:none; padding:none" >
+				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/greens_big_idea.png" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/gruffs_walking_to_kapok.png" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px;" src="./assets/cony_amazon.png" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate/cony_pg5.jpeg" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate/cony_pg7.jpeg" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate/cony_pg9.jpeg" class="rounded-image">
+			</div>
 		</div>
+
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div >
+				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart2/IMG_2103.png" class="rounded-image">
+			</div>
+			<div style= "margin:none; padding:none" >
+				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart2/IMG_2107.png" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart2/IMG_2106.png" class="rounded-image">
+				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart2/IMG_2105.png" class="rounded-image">
+				
+			</div>
+		</div>
+
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div >
+				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/image_123650291.JPG" class="rounded-image">
+			</div>
+			<div style= "margin:none; padding:none" >
+				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/Watson 1.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/Watson 2.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/Watson 3.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/Watson 4.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/Sherlock 6.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/Sherlock 1 1.png" class="rounded-image">
+			</div>
+		</div>
+
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div >
+				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/image_123650291_3.JPG" class="rounded-image">
+			</div>
+			<div style= "margin:none; padding:none" >
+				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/Sherlock 1 1.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/Sherlock 2.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/Sherlock 3.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/Sherlock 4.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/Watson 1.png" class="rounded-image">
+				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/Sherlock 5.png" class="rounded-image">
+			</div>
+		</div>
+
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div style= "margin:none; padding:none" >
+				<img style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2087.png" class="rounded-image">
+				<img style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2086.png" class="rounded-image">
+				<img style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2085.png" class="rounded-image">
+				<img style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2084.png" class="rounded-image">
+			</div>
+		</div>
+
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div onmouseover="this.style.cursor='pointer'" onclick="window.open('https://www.etsy.com/ca/listing/1812361446/adventurous-animal-wall-art-cute-fox?ref=shop_home_active_14&logging_key=e8429fd0fe5fed5736eedf4a4111e9c9a6bbe425%3A1812361446', '_blank')"   style= "margin:none; padding:none" >
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart4lastofem/IMG_2100.png" class="rounded-image">
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart4lastofem/IMG_2101.png" class="rounded-image">
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart4lastofem/IMG_2102.png" class="rounded-image">
+			</div>
+		</div>
+
 
 		<div class="yoo" style="margin:0 auto; ">
-			<div class="sub-heading">
-				<span>The Adventures of Cony Forest</span>
-			</div>
-			<div class="sub-heading-write-up">
-				<div>
-					Published Dec 3rd, 2024 </div>
-				<div>This is ia chapter book I illustrated about a trio of birds that go on a
-					quest to find an ancient secret and save Cony Forest!
-
-				</div>
-				<div> <a target="_blank" href="https://a.co/d/2N38qWH"> Buy on Amazon! </a></div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img src="./assets/cony_cover_mockup.png" class="tile">
-				</div>
-				<div>
-					<img src="./assets/portfolioupdate/cony_pg5.png" class="tile">
-				</div>
-			</div>
-
-
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img src="./assets/portfolioupdate/cony_pg7.png" class="tile">
-				</div>
-				<div>
-					<img src="./assets/portfolioupdate/cony_pg9.png" class="tile">
-				</div>
-			</div>
-
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<div class="sub-heading">
-				<span>Life Story Illustration</span>
-			</div>
-			<div class="sub-heading-write-up">
-				<span>This client wanted custom illustrations for a short story for children aged 6-11
-				</span>
-			</div>
-
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img class="left-tiled" src="./assets/kidz_klub_1.png" class="left-tiled">
-				</div>
-				<div>
-					<img src="./assets/kidz_klub_2.png" class="right-tiled">
-				</div>
-			</div>
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<div class="sub-heading">
-				<span>Sherlock and Watson</span>
-			</div>
-			<div class="sub-heading-write-up">
-				<span>In this project, I have reimagined the Adventures of Sherlock Holmes to appeal to a younger
-					audience. </span>
-			</div>
-
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img class="left-tiled" src="./assets/sherlock_scarlet.JPG">
-				</div>
-				<div>
-					<img src="./assets/sherlock_hound.JPG" class="right-tiled">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/sherlock_bw.png" class="tile">
-				</div>
-			</div>
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-			<div class="sub-heading">
-				<span>The Enchanted Grove </span>
-			</div>
-			<div class="sub-heading-write-up">
-				<span>When Lila, Amara and Elliot stumble across an enchanted book, everything changes. They’re drawn
-					beyond its pages and into the Enchanted Grove on a quest to uncover the mysteries of the
-					Nightblossoms’ song.</span>
-			</div>
-
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img class="left-tiled" src="./assets/magical_storybook_1.jpeg" class="left-tiled">
-				</div>
-				<div>
-					<img src="./assets/portfolioupdate/magical_storybook_2.jpeg" class="right-tiled">
-				</div>
-			</div>
-
-
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
-
-			<div id="picture-books" class="line-text fun-font"
-				style="position: sticky; top: 0; background-color: #f2f2f2;">
-				<hr>
-				<span>Picture Books</span>
-				<hr>
-			</div>
-			<div class="sub-heading">
-				<span>Treasure Hunt</span>
-			</div>
-			<div class="sub-heading-write-up">
-				<span>A cat searching for treasure with its trusty spider side-kick.</span>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/treasure_cat.jpeg" class="tile">
-				</div>
-			</div>
-
-			<div class="sub-heading">
-				<span>The Lord is my Shepherd</span>
-			</div>
-			<div class="sub-heading-write-up">
-				<span>This custom book was based on Psalm 23 for a client who wanted to imagine her daughter in the
-					story.</span>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center">
-				<div>
-					<img src="./assets/portfolioupdate/psalm23_1.png" class="tile">
-				</div>
-				<div>
-					<img src="./assets/portfolioupdate/psalm23_2.png" class="tile">
-				</div>
-			</div>
-
-
-
-			<div class="sub-heading">
-				<span>Not Without my Dragon</span>
-			</div>
-			<div class="sub-heading-write-up">
-				<span>This is a picture book that I am creating about a little girl named Nadia, as she and her dragon
-					enjoy their
-					last summer before preschool. As the school year approaches, she begins to get nervous -
-					she doesn’t want to leave her dragon behind! Nadia and Dragon begin creating schemes to try to get
-					her out of going to school in the fall. </span>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/pet_dragon.jpeg" class="tile">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;"></div>
-			<div>
-				<img src="./assets/portfolioupdate/pet_dragon_1.jpeg" class="tile">
-			</div>
-
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/portfolioupdate/pet_dragon_2.jpeg" class="tile">
-				</div>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/portfolioupdate/pet_dragon_3.jpeg" class="tile">
-				</div>
-			</div>
-
-			<!--
-		
-			<div class="sub-heading">
-				<span>Little Star - Big Dreams</span>
-			</div>
-			<div class="sub-heading-write-up">
-				<span>Description</span>
-			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
-				<div>
-					<img src="./assets/portfolioupdate/kiddo.JPG" class="tile">
-				</div>
-			</div>
-	-->
-
-
-
-
-
 			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
 			<div id="me" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
 				<hr>
@@ -273,7 +165,7 @@ dragon story (3-6)
 			</div>
 			<div class="image-container" style="display:flex; justify-content:center;">
 				<div>
-					<img src="./assets/cat.gif" class="tile">
+					<img src="./assets/cat-ezgif.com-crop.gif" class="tile">
 				</div>
 			</div>
 		</div>
@@ -281,7 +173,7 @@ dragon story (3-6)
 	</div>
 	<footer>
 
-		<p>&copy; 2024 My Portfolio. All rights reserved.</p>
+		<p>&copy; 2025 My Portfolio. All rights reserved.</p>
 	</footer>
 
 
