--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width: 1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+		<div class="tile-columns" style = "max-width: 1300px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
 			<div >
 				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart1/limbo.title.png" class="rounded-image">
 			</div>
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 
-		<div onclick="window.open('https://www.amazon.ca/Adventures-Cony-Forest-Ancient-Secret/dp/9334156635/ref=sr_1_1?crid=1MJFCFKMC2J4S&dib=eyJ2IjoiMSJ9.K456wtGNUYyy8iUyaMh7j-_w56nFEOXfMt5rwO7VFss.zp_3hDzMYmAZA9QQkAdWbSjg19TW2QKBsdLrT_VaGI0&dib_tag=se&keywords=cony+forest&qid=1743534210&sprefix=cony+forest%2Caps%2C100&sr=8-1', '_blank')"  class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px" onmouseover="this.style.cursor='pointer'">
+		<div class="tile-columns" style = "max-width:1300px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px" >
 			<div >
 				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart1/Untitled_Artwork.png" class="rounded-image">
 			</div>
@@ -69,7 +69,7 @@
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+		<div class="tile-columns" style = "max-width:1300px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
 			<div >
 				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart2/IMG_2103.png" class="rounded-image">
 			</div>
@@ -81,7 +81,7 @@
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+		<div class="tile-columns" style = "max-width:1300px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
 			<div >
 				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/image_123650291.JPG" class="rounded-image">
 			</div>
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+		<div class="tile-columns" style = "max-width:1300px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
 			<div >
 				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/image_123650291_3.JPG" class="rounded-image">
 			</div>
@@ -109,16 +109,16 @@
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+		<div class="tile-columns" style = "max-width:1300px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
 			<div style= "margin:none; padding:none" >
-				<img style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2087.png" class="rounded-image">
-				<img style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2086.png" class="rounded-image">
-				<img style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2085.png" class="rounded-image">
-				<img style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2084.png" class="rounded-image">
+				<img class = "double-page" style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2087.png" >
+				<img class = "double-page" style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2086.png" >
+				<img class = "double-page" style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2085.png" >
+				<img class = "double-page" style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/IMG_2084.png" >
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+		<div class="tile-columns" style = "max-width:1300px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
 			<div onmouseover="this.style.cursor='pointer'" onclick="window.open('https://www.etsy.com/ca/listing/1812361446/adventurous-animal-wall-art-cute-fox?ref=shop_home_active_14&logging_key=e8429fd0fe5fed5736eedf4a4111e9c9a6bbe425%3A1812361446', '_blank')"   style= "margin:none; padding:none" >
 				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart4lastofem/IMG_2100.png" class="rounded-image">
 				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart4lastofem/IMG_2101.png" class="rounded-image">
