--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
 				</div>
 		</div>
 
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div >
+				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/katrinasportfolioupdate/lab_cover_web.png" class="rounded-image">
+			</div>
+			<div style= "margin:none; padding:none" >
+				<img class = "double-page" style = "max-width:450px; border-radius:15px; align-content: bottom" src="./assets/katrinasportfolioupdate/lab_01_web.jpeg" >
+				<img class = "double-page" style = "max-width:450px; border-radius:15px; align-content: bottom" src="./assets/katrinasportfolioupdate/lab_02_web.jpeg" >
+			</div>
+		</div>
 		<div class="tile-columns" style = "max-width: 1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
 			<div >
 				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart1/limbo_title_01_web.png" class="rounded-image">
@@ -52,6 +61,30 @@
 				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart1/limbo_bear_confrontation_01_web.png" class="rounded-image">
 				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart1/limbo_monster_view_01_web.png" class="rounded-image">
 				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart1/limbo_over_shoulder_01_web.png" class="rounded-image">
+			</div>
+		</div>
+
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div >
+				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/artwork_photo_01_web.jpg" class="rounded-image">
+			</div>
+			<div style= "margin:none; padding:none" >
+				<img style = "max-width:225px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_watson_02_web.png" class="rounded-image">
+				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_watson_03_web.png" class="rounded-image">
+				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_watson_04_web.png" class="rounded-image">
+				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_sherlock_06_web.png" class="rounded-image">
+			</div>
+		</div>
+
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div >
+				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/artwork_photo_02_web.jpg" class="rounded-image">
+			</div>
+			<div style= "margin:none; padding:none" >
+				<img style = "max-width:225px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_sherlock_02_web.png" class="rounded-image">
+				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_sherlock_04_web.png" class="rounded-image">
+				<img style = "max-width:225px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_watson_01_web.png" class="rounded-image">
+				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_sherlock_05_web.png" class="rounded-image">
 			</div>
 		</div>
 
@@ -69,45 +102,7 @@
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div >
-				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart2/artwork_sketch_01_web.png" class="rounded-image">
-			</div>
-			<div style= "margin:none; padding:none" >
-				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart2/artwork_sketch_04_web.png" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart2/artwork_sketch_03_web.png" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart2/artwork_sketch_02_web.png" class="rounded-image">
-				
-			</div>
-		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div >
-				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/artwork_photo_01_web.jpg" class="rounded-image">
-			</div>
-			<div style= "margin:none; padding:none" >
-				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_watson_01_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_watson_02_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/character_watson_03_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/character_watson_04_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/character_sherlock_06_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_sherlock_01_web.png" class="rounded-image">
-			</div>
-		</div>
-
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div >
-				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/artwork_photo_02_web.jpg" class="rounded-image">
-			</div>
-			<div style= "margin:none; padding:none" >
-				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_sherlock_01_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_sherlock_02_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/character_sherlock_03_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/character_sherlock_04_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_watson_01_web.png" class="rounded-image">
-				<img style = "max-width:150px; border-radius:15px;" src="./assets/sherlock/character_sherlock_05_web.png" class="rounded-image">
-			</div>
-		</div>
 
 		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
 			<div style= "margin:none; padding:none" >
@@ -126,6 +121,13 @@
 			</div>
 		</div>
 
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div style= "margin:none; padding:none" >
+				<img class = "double-page" style = "max-width:100%; border-radius:15px; align-content: bottom" src="./assets/katrinasportfolioupdate/nursery_web.png" >
+			</div>
+		</div>
+
+
 
 		<div class="yoo" style="margin:0 auto; ">
 			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
@@ -136,7 +138,7 @@
 			</div>
 			<div class="columns image-container" style="display:flex; justify-content:center; ">
 				<div class="column is-one-half" style="display: flex; justify-content: center; align-items: center;">
-					<img style="width: 80%; height: auto;" class="left-tiled" src="./assets/portrait_katrina_01_web.png">
+					<img style="width: 80%; height: auto; border-radius:100%" class="left-tiled" src="./assets/portrait_katrina_01_web.png">
 				</div>
 				<div class="column is-one-half" style="display: flex; justify-content: center;">
 					<div>
