--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
 			</div>
 		</div>
 
+		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
+			<div style= "margin:none; padding:none" >
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2649_web.png" class="rounded-image">
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2650_web.png" class="rounded-image">
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2651_web.png" class="rounded-image">
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2652_web.png" class="rounded-image">
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2653_web.png" class="rounded-image">
+				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2654_web.png" class="rounded-image">
+			</div>
+		</div>
 
 
 		<div class="yoo" style="margin:0 auto; ">
