--- a/index.html
+++ b/index.html
@@ -11,183 +11,161 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="icon" type="image/x-icon" href="/assets/favicon_01.ico">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-		rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 	<script src="script.js"></script>
 </head>
 
-
 <body class="body-style">
+	<div class="main-container main-container-flex">
 
-	<div class="main-container" style="align-items: center; justify-content: center; display: flex; flex-direction: column;">
-		<h2 class="name-heading" style="color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%; line-height:80px;" >Katrina
-			Abraham</h2>
-		<h2 class="" style="font-family: Just me Again Down Here; color: #5d4143;  padding-bottom: 0%; margin-bottom: 0%; font-size:48px">Artist - Illustrator</h2>
+		<!-- ============ HEADER ============ -->
+		<h2 class="name-heading" style="color: #5d4143; padding-bottom: 0%; margin-bottom: 0%; line-height: 80px;">Katrina Abraham</h2>
+		<h2 style="font-family: Just me Again Down Here; color: #5d4143; padding-bottom: 0%; margin-bottom: 0%; font-size: 48px;">Artist - Illustrator</h2>
 
-		<div class="navbuttons" style=" justify-content: center; align-items: center;">
+		<!-- ============ NAVIGATION ============ -->
+		<div class="navbuttons" style="justify-content: center; align-items: center;">
 			<div onclick="window.open('https://www.etsy.com/shop/katrinaabrahamdesign', '_blank')" class="navbutton">Visit my Etsy Shop!</div>
 			<div onclick="window.open('https://www.amazon.ca/Adventures-Cony-Forest-Ancient-Secret/dp/9334156635/ref=sr_1_1?crid=1MJFCFKMC2J4S&dib=eyJ2IjoiMSJ9.K456wtGNUYyy8iUyaMh7j-_w56nFEOXfMt5rwO7VFss.zp_3hDzMYmAZA9QQkAdWbSjg19TW2QKBsdLrT_VaGI0&dib_tag=se&keywords=cony+forest&qid=1743534210&sprefix=cony+forest%2Caps%2C100&sr=8-1', '_blank')" class="navbutton">Cony Forest available on Amazon</div>
 			<div onclick="scrollToTarget('me')" class="navbutton">About Me</div>
 			<div onclick="scrollToTarget('me')" class="navbutton">Contact Me</div>
 		</div>
-		<div style="display: flex; justify-content: center; gap: 20px; margin-top: 10px;">
+
+		<!-- ============ SOCIAL LINKS ============ -->
+		<div class="social-icons" style="margin-top: 10px;">
 			<a href="https://www.instagram.com/katrina.abraham.art/" target="_blank">
-				<img src="assets/icon_instagram_01_web.png" alt="Instagram" style="width: 30px; height: 30px;">
+				<img src="assets/icon_instagram_01_web.png" alt="Instagram" class="social-icon">
 			</a>
 			<a href="katrina.sm.abraham@gmail.com">
-				<img src="assets/icon_email_01_web.png" alt="Email" style="width: 30px; height: 30px;">
+				<img src="assets/icon_email_01_web.png" alt="Email" class="social-icon">
 			</a>
-				<div>
-					<img src="./assets/animation_cat_01.gif" style = "height:30px; " class="tile">
-				</div>
-		</div>
-
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div >
-				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/katrinasportfolioupdate/lab_cover_web.png" class="rounded-image">
-			</div>
-			<div style= "margin:none; padding:none" >
-				<img class = "double-page" style = "max-width:450px; border-radius:15px; align-content: bottom" src="./assets/katrinasportfolioupdate/lab_01_web.jpeg" >
-				<img class = "double-page" style = "max-width:450px; border-radius:15px; align-content: bottom" src="./assets/katrinasportfolioupdate/lab_02_web.jpeg" >
-			</div>
-		</div>
-		<div class="tile-columns" style = "max-width: 1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div >
-				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart1/limbo_title_01_web.png" class="rounded-image">
-			</div>
-			<div >
-				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart1/limbo_bear_confrontation_01_web.png" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart1/limbo_monster_view_01_web.png" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px;" src="./assets/portfolioupdatepart1/limbo_over_shoulder_01_web.png" class="rounded-image">
+			<div>
+				<img src="./assets/animation_cat_01.gif" style="height: 30px;" class="tile">
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div >
-				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/artwork_photo_01_web.jpg" class="rounded-image">
+		<!-- ============ PORTFOLIO: Lab Series ============ -->
+		<div class="tile-columns portfolio-section">
+			<div>
+				<img src="./assets/katrinasportfolioupdate/lab_cover_web.png" class="portfolio-cover">
 			</div>
-			<div style= "margin:none; padding:none" >
-				<img style = "max-width:225px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_watson_02_web.png" class="rounded-image">
-				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_watson_03_web.png" class="rounded-image">
-				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_watson_04_web.png" class="rounded-image">
-				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_sherlock_06_web.png" class="rounded-image">
-			</div>
-		</div>
-
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div >
-				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdate/artwork_photo_02_web.jpg" class="rounded-image">
-			</div>
-			<div style= "margin:none; padding:none" >
-				<img style = "max-width:225px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_sherlock_02_web.png" class="rounded-image">
-				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_sherlock_04_web.png" class="rounded-image">
-				<img style = "max-width:225px; border-radius:15px; align-content: bottom" src="./assets/sherlock/character_watson_01_web.png" class="rounded-image">
-				<img style = "max-width:225px; border-radius:15px;" src="./assets/sherlock/character_sherlock_05_web.png" class="rounded-image">
+			<div>
+				<img src="./assets/katrinasportfolioupdate/lab_01_web.jpeg" class="double-page portfolio-img-xl">
+				<img src="./assets/katrinasportfolioupdate/lab_02_web.jpeg" class="double-page portfolio-img-xl">
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px" >
-			<div >
-				<img style = "max-width:300px; border-radius: 15px; margin-right: 10px" src="./assets/portfolioupdatepart1/artwork_untitled_01_web.png" class="rounded-image">
+		<!-- ============ PORTFOLIO: Limbo Series ============ -->
+		<div class="tile-columns portfolio-section">
+			<div>
+				<img src="./assets/portfolioupdatepart1/limbo_title_01_web.png" class="portfolio-cover">
 			</div>
-			<div style= "margin:none; padding:none" >
-				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/illustration_greens_idea_01_web.png" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/illustration_gruffs_walking_01_web.png" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px;" src="./assets/illustration_cony_amazon_01_web.png" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate/cony_page_05_web.jpeg" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate/cony_page_07_web.jpeg" class="rounded-image">
-				<img style = "max-width:300px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate/cony_page_09_web.jpeg" class="rounded-image">
+			<div>
+				<img src="./assets/portfolioupdatepart1/limbo_bear_confrontation_01_web.png" class="portfolio-img-md">
+				<img src="./assets/portfolioupdatepart1/limbo_monster_view_01_web.png" class="portfolio-img-md">
+				<img src="./assets/portfolioupdatepart1/limbo_over_shoulder_01_web.png" class="portfolio-img-md">
 			</div>
 		</div>
 
-
-
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div style= "margin:none; padding:none" >
-				<img class = "double-page" style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/comic_page_04_web.png" >
-				<img class = "double-page" style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/comic_page_03_web.png" >
-				<img class = "double-page" style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/comic_page_02_web.png" >
-				<img class = "double-page" style = "max-width:600px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart3/comic_page_01_web.png" >
+		<!-- ============ PORTFOLIO: Skating Girl ============ -->
+		<div class="tile-columns portfolio-section">
+			<div>
+				<img src="./assets/portfolioupdate5/skating_girl_4.png" class="portfolio-img-lg">
+				<img src="./assets/portfolioupdate5/skating_girl_5.png" class="portfolio-img-lg">
+				<img src="./assets/portfolioupdate5/skating_girl_3.png" class="portfolio-img-lg">
+				<img src="./assets/portfolioupdate5/skating_girl_1.png" class="portfolio-img-lg">
+				<img src="./assets/portfolioupdate5/skating_girl_2.png" class="portfolio-img-lg">
+				<img src="./assets/portfolioupdate5/skating_girl_6.png" class="portfolio-img-lg">
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div onmouseover="this.style.cursor='pointer'" onclick="window.open('https://www.etsy.com/ca/listing/1812361446/adventurous-animal-wall-art-cute-fox?ref=shop_home_active_14&logging_key=e8429fd0fe5fed5736eedf4a4111e9c9a6bbe425%3A1812361446', '_blank')"   style= "margin:none; padding:none" >
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart4lastofem/animal_art_fox_01_web.png" class="rounded-image">
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart4lastofem/animal_art_fox_02_web.png" class="rounded-image">
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdatepart4lastofem/animal_art_fox_03_web.png" class="rounded-image">
+		<!-- ============ PORTFOLIO: Cony Forest Series ============ -->
+		<div class="tile-columns portfolio-section">
+			<div>
+				<img src="./assets/portfolioupdatepart1/artwork_untitled_01_web.png" class="portfolio-cover">
+			</div>
+			<div>
+				<img src="./assets/illustration_greens_idea_01_web.png" class="portfolio-img-md">
+				<img src="./assets/illustration_gruffs_walking_01_web.png" class="portfolio-img-md">
+				<img src="./assets/illustration_cony_amazon_01_web.png" class="portfolio-img-md">
+				<img src="./assets/portfolioupdate/cony_page_05_web.jpeg" class="portfolio-img-md">
+				<img src="./assets/portfolioupdate/cony_page_07_web.jpeg" class="portfolio-img-md">
+				<img src="./assets/portfolioupdate/cony_page_09_web.jpeg" class="portfolio-img-md">
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div style= "margin:none; padding:none" >
-				<img class = "double-page" style = "max-width:100%; border-radius:15px; align-content: bottom" src="./assets/katrinasportfolioupdate/nursery_web.png" >
+		<!-- ============ PORTFOLIO: Comic Pages ============ -->
+		<div class="tile-columns portfolio-section">
+			<div>
+				<img src="./assets/portfolioupdatepart3/comic_page_04_web.png" class="double-page portfolio-img-xxl">
+				<img src="./assets/portfolioupdatepart3/comic_page_03_web.png" class="double-page portfolio-img-xxl">
+				<img src="./assets/portfolioupdatepart3/comic_page_02_web.png" class="double-page portfolio-img-xxl">
+				<img src="./assets/portfolioupdatepart3/comic_page_01_web.png" class="double-page portfolio-img-xxl">
 			</div>
 		</div>
 
-		<div class="tile-columns" style = "max-width:1220px; display:flex; flex-direction:rows;  align-items: center; justify-content:bottom; padding-bottom: 10px">
-			<div style= "margin:none; padding:none" >
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2649_web.png" class="rounded-image">
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2650_web.png" class="rounded-image">
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2651_web.png" class="rounded-image">
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2652_web.png" class="rounded-image">
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2653_web.png" class="rounded-image">
-				<img style = "max-width:400px; border-radius:15px; align-content: bottom" src="./assets/portfolioupdate5/IMG_2654_web.png" class="rounded-image">
+		<!-- ============ PORTFOLIO: Fox Art (Etsy Link) ============ -->
+		<div class="tile-columns portfolio-section">
+			<div onmouseover="this.style.cursor='pointer'" onclick="window.open('https://www.etsy.com/ca/listing/1812361446/adventurous-animal-wall-art-cute-fox?ref=shop_home_active_14&logging_key=e8429fd0fe5fed5736eedf4a4111e9c9a6bbe425%3A1812361446', '_blank')">
+				<img src="./assets/portfolioupdatepart4lastofem/animal_art_fox_01_web.png" class="portfolio-img-lg">
+				<img src="./assets/portfolioupdatepart4lastofem/animal_art_fox_02_web.png" class="portfolio-img-lg">
+				<img src="./assets/portfolioupdatepart4lastofem/animal_art_fox_03_web.png" class="portfolio-img-lg">
+			</div>
+		</div>
+
+		<!-- ============ PORTFOLIO: Nursery ============ -->
+		<div class="tile-columns portfolio-section">
+			<div>
+				<img src="./assets/katrinasportfolioupdate/nursery_web.png" class="double-page portfolio-img-full">
 			</div>
 		</div>
 
 
-		<div class="yoo" style="margin:0 auto; ">
-			<!------------------------------------------------------------------------------------------------------------------------------------------------------>
+		<!-- ============ ABOUT ME ============ -->
+		<div class="yoo" style="margin: 0 auto;">
 			<div id="me" class="line-text fun-font" style="position: sticky; top: 0; background-color: #f2f2f2;">
 				<hr>
 				<span>About Me</span>
 				<hr>
 			</div>
-			<div class="columns image-container" style="display:flex; justify-content:center; ">
+			<div class="columns image-container" style="display: flex; justify-content: center;">
 				<div class="column is-one-half" style="display: flex; justify-content: center; align-items: center;">
-					<img style="width: 80%; height: auto; border-radius:100%" class="left-tiled" src="./assets/portrait_katrina_01_web.png">
+					<img style="width: 80%; height: auto; border-radius: 100%;" class="left-tiled" src="./assets/portrait_katrina_01_web.png">
 				</div>
 				<div class="column is-one-half" style="display: flex; justify-content: center;">
 					<div>
-						<div class="line-text fun-font" style="padding-bottom: 5%; padding-top:5%">Hi, I'm Katrina!
-						</div>
-						<div style="color:#000000">
+						<div class="line-text fun-font" style="padding-bottom: 5%; padding-top: 5%;">Hi, I'm Katrina!</div>
+						<div style="color: #000000;">
 							I am a Canadian illustrator with a passion for creativity and visual story-telling. I am
 							particularly drawn to creating illustrations that spark imagination and those that transport
 							viewers to adventurous and fantastical worlds. Although my roots are in using pencils and
 							pens, these days I mostly draw digitally. Thank you for taking the time to visit my
 							portfolio. I hope you enjoy exploring my work as much as I enjoyed creating it.
 						</div>
-						<p style="color:#724848">Contact me at: katrina.sm.abraham@gmail.com</p>
-						<div style="display: flex; justify-content: center; gap: 20px;">
+						<p style="color: #724848;">Contact me at: katrina.sm.abraham@gmail.com</p>
+						<div class="social-icons">
 							<a href="https://www.instagram.com/katrina.abraham.art/" target="_blank">
-								<img src="assets/icon_instagram_01_web.png" alt="Instagram"
-									style="width: 30px; height: 30px;">
+								<img src="assets/icon_instagram_01_web.png" alt="Instagram" class="social-icon">
 							</a>
 							<a href="katrina.sm.abraham@gmail.com">
-								<img src="assets/icon_email_01_web.png" alt="Email" style="width: 30px; height: 30px;">
+								<img src="assets/icon_email_01_web.png" alt="Email" class="social-icon">
 							</a>
-
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="image-container" style="display:flex; justify-content:center;">
+			<div class="image-container" style="display: flex; justify-content: center;">
 				<div>
 					<img src="./assets/animation_cat_01.gif" class="tile">
 				</div>
 			</div>
 		</div>
-	</div>
-	</div>
-	<footer>
 
+	</div>
+
+	<!-- ============ FOOTER ============ -->
+	<footer>
 		<p>&copy; 2025 My Portfolio. All rights reserved.</p>
 	</footer>
-
 
 </body>
 
