--- a/index.html
+++ b/index.html
@@ -103,15 +103,6 @@
 			</div>
 		</div>
 
-		<!-- ============ PORTFOLIO: Fox Art (Etsy Link) ============ -->
-		<div class="tile-columns portfolio-section">
-			<div onmouseover="this.style.cursor='pointer'" onclick="window.open('https://www.etsy.com/ca/listing/1812361446/adventurous-animal-wall-art-cute-fox?ref=shop_home_active_14&logging_key=e8429fd0fe5fed5736eedf4a4111e9c9a6bbe425%3A1812361446', '_blank')">
-				<img src="./assets/portfolioupdatepart4lastofem/animal_art_fox_01_web.png" class="portfolio-img-lg">
-				<img src="./assets/portfolioupdatepart4lastofem/animal_art_fox_02_web.png" class="portfolio-img-lg">
-				<img src="./assets/portfolioupdatepart4lastofem/animal_art_fox_03_web.png" class="portfolio-img-lg">
-			</div>
-		</div>
-
 		<!-- ============ PORTFOLIO: Nursery ============ -->
 		<div class="tile-columns portfolio-section">
 			<div>
@@ -160,6 +151,12 @@
 			</div>
 		</div>
 
+	</div>
+
+	<!-- ============ IMAGE LIGHTBOX MODAL ============ -->
+	<div id="lightbox-modal" class="lightbox-modal">
+		<span class="lightbox-close">&times;</span>
+		<img class="lightbox-content" id="lightbox-img">
 	</div>
 
 	<!-- ============ FOOTER ============ -->
